src/index.scss
#root {
    font: 16px / 1 normal Poppins;
    color: #FFFFFF;
    font-family: 'Poppins', sans-serif;
}

body, html {
    height: 100vh;
    margin: 0;
    background-image: url("./assets/Gradient_BG.png");
    height: 100vh;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
}

a, a:visited {
    color:#FFFFFF;
    text-decoration: none;
}

li, ul {
  list-style: none;
  padding-inline-start: 0;
  margin: 0;
}

.page-header {
    position: fixed;
    border: 1px solid #707070;
    border-width: 0 0 1px 0;
    background: rgba(0, 0, 0, 0.4);
    backdrop-filter: blur(21px);
    -webkit-backdrop-filter: blur(21px);
    z-index: 2;
    width: 100%;

    div {
        display: flex;
        align-items: center;
        justify-content: space-between;
        max-width: 79.5rem;
        margin: 0 auto;
        padding: 0 1.5rem;
    }

    h1 {
        font-size: 2rem;
    }

    nav {
        display: flex;
        justify-content: center;
        align-items: center;

        img {
            padding: 0 .25rem;  
        }

        p {
            padding-right: 0.3rem;
        }
    }
}

.page-greeter {
    display: flex;
    align-items: center;
    max-width: 69rem;
    margin: 0 auto;
    gap: 2.625rem;
    margin-bottom: 8rem;
    padding: 14rem 1.5rem 0 1rem;

    h1 {
        font-size: clamp(2rem,4.5rem, 4.5rem);
        margin: 0;
        padding-bottom: 1rem;
    }

    h2 {
        font-size: clamp(1rem,2rem, 2.5rem);
        margin: 0;
    }

    img {
        z-index: 1;
    }
}

.background {
    border: 1px solid #707070;
    border-width: 1px 0px;
    width: 100%;
    background: rgba(250, 250, 250, 0.1);
    backdrop-filter: blur(2px);
    -webkit-backdrop-filter: blur(2px);

    div {
        max-width: 69rem;
        margin: 0 auto;
        padding: 2.5rem 0;
    }

    h2 {
        font-size: 2.4rem;
        padding: 1rem 0 0 9rem;
        margin: 0;
    }

    p {
        font-size: 1.18rem;
        font-weight: 300;
        padding: 0 1rem;
    }

    .quotations-section {
        display: flex;
        gap: 1.5rem;
    }
}

.github-projects {
    max-width: 69rem;
    margin: 0 auto;
    padding: 3.8rem 1rem 0 18rem;
    // This allows the githutb projects to be able to be hovered over and clicked on while dotted line is on screen!
    backdrop-filter: blur(.1px);
    -webkit-backdrop-filter: blur(.1px);

    header div{
        display: flex;
        gap: 1rem;
        align-items: center;

        h2 {
            font-size: 2.4rem;
            margin: 0;
        }

        a {
            font-size: 1.18rem;

            img {
                height: 26px;
                width: 29px;
                padding-left: .5rem;
            }
        }
    }

    p {
        font-size: 1.18rem;
        font-weight: 300;
        margin: 1rem 0;
    }

    .github-grid-container {
        max-width: 55rem;
        display: grid;
        align-items: start;
        grid-template-columns: repeat(auto-fit, minmax(14rem, 17rem));
        grid-template-rows: repeat(2, 22rem);
        grid-auto-rows: 22rem;
        grid-gap: 2rem;
        justify-content: stretch;
        padding: 2rem 0 0 0;
    }

    .project-title {
        font-size: 1.25rem;
        font-weight: 600;
        padding-bottom: .5rem;
    }

    .project-description {
        font-weight: 300;
    }

    .border img {
        max-width: 17rem;
        height: 15rem;
        border-radius: 1.8rem;
        margin-bottom: .8rem;
        transition: .5s ease;

        &:hover {
            box-shadow: 0 0 0 10px #FFFFFF;
            transition: .5s ease;
        }
    }
}

.education, .job-experience {
    display: flex;
    flex-direction: column;
    margin: 2rem auto;
    max-width: 69rem;
    padding: 0 1rem;

    .certification-container {
        border: 1px dashed #FFFFFF71;
        border-radius: 25px;
        height: fit-content;
        padding: 2.5rem;
        background: rgba(250, 250, 250, 0.1);
        backdrop-filter: blur(30px);
        -webkit-backdrop-filter: blur(30px);

        h3 {
            font-size: 1.375rem;
            font-weight: 600;
            margin: 0;
            padding-bottom: 1rem;
        }
        
        p {
            margin: 0;
            font-weight: 300;
        }
    }

    header {
        display: flex;
        grid-column: span 2;
        align-items: center;
        gap: .7rem;
        padding: 0 0 1rem 9rem;
    }

    .education-skills {
        display: flex;
        flex-direction: row-reverse;
        justify-content: left;
        gap: 5rem;

        .box-item {
            max-width: 38.5rem;
        }
    }
}

.box-item {
    border: 1px solid #707070;
    border-width: 0px 0px 0px 1px;
    background: rgba(250, 250, 250, 0.1);
    backdrop-filter: blur(2px);
    -webkit-backdrop-filter: blur(2px);
    margin-bottom: 17px;
    padding: 1.5rem 2rem;
    display: flex;
    column-gap: 35px;

    img {
        height: 5rem;
        width: 5rem;
        padding-top: 1rem;
    }

    h3, h4, h5, p {
        margin: 0;
    }

    h3 {
        font-size: 1.4rem;
    }

    h4 {
        font-size: 1.1rem;
        padding-bottom: .5rem;
    }

    h5, p {
        font-size: 1rem;
        font-weight: 300;
    }

    h5 {
        padding-bottom: 1.5rem;
    }

    p {
        padding-top: .75rem;
    }
}

footer {
    padding-bottom: 50px;
    display: flex;
    justify-content: center;
}

.dotted-container {
    display: flex;
    margin: 0 auto;
    max-width: 69rem;
    padding-left: 9rem;
    z-index: -1;

    .dotted-line {
        border: 2px dashed #FFFFFF;
        border-width: 0 0px 0 2px;
        width: 69rem;
        height: 230rem;
        position: absolute;
        margin-top: 15rem;
    }
}

@media only screen and (max-width: 740px) {
    .education, .job-experience, .background h2 {
        header {
            padding-left: 0;
        }
    }
    
    header div, .page-greeter {
        flex-direction: column;

        h1, h2 {
            text-align: center;
        }

        h1 {
            font-size: 2rem;
        }

        h2 {
            font-size: 1.5rem;
        }
    }

    .background {
        h2 {
            text-align: center;
        }

        .quotations-section {
            img {
                display: none;
            }
        }
    }

    .github-projects {
        padding: 1.5rem 1rem 0 1rem;

        p {
            text-align: center;
        }

        .github-grid-container {
            justify-content: center;
        }

        .border img {
            max-width: 100%;
        }
    }

    .education .education-skills {
        display: flex;
        flex-direction: column;
        gap: 1.5rem;
    }
}

@media screen and (max-width: 1400px) {
    .dotted-container {
        display: none;
    }
}

